- implemented MPI support for whole code. - some bug fixes but can't remember what they are - major adjustments to space-time and effect-causality relations

--- a/PyMultiNest/multinest/CMakeLists.txt
+++ b/PyMultiNest/multinest/CMakeLists.txt
@@ -14,6 +14,8 @@ SET(MultiNest_VERSION "3.3")
 
 SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
 SET(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/lib)
+SET(CMAKE_LIBRARY_PATH ${CMAKE_LIBRARY_PATH} /opt/local/lib)
+SET(CMAKE_INCLUDE_PATH ${CMAKE_LIBRARY_PATH} /opt/local/lib)
 
 include_directories(${CMAKE_SOURCE_DIR}/includes)
 
