- major changes in create_grid and plot_grid - new parameters: grid_res, grid_snr

--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,10 @@ chains/
 output/
 .metadata/
 .project
-.idea/
+.idea/*
 .pydevproject
 .settings
 test-code/
 Input/
 Preselector/
+marco_fixes.txt
